trunk/Archive2/e1/382895e9a81154/main.cpp
#include <utility>

int main()
{
    int i = 42;
    double j = reinterpret_cast<double&&>(std::move(i));
}